[gd_scene load_steps=15 format=3 uid="uid://cwawrjs36jqe5"]

[ext_resource type="Script" path="res://scripts/enemies/wasp.gd" id="1_2m428"]
[ext_resource type="PackedScene" uid="uid://db8algl6onq53" path="res://scenes/components/health_component.tscn" id="1_o4xoc"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="2_o2djb"]
[ext_resource type="SpriteFrames" uid="uid://d1s04st3d5vv6" path="res://assets/enemies/flying_enemy/wasp_1.tres" id="3_37lnf"]
[ext_resource type="PackedScene" uid="uid://ddwqea3byvpm8" path="res://assets/enemies/flying_enemy/flying_enemy_1.aseprite" id="3_lp1mt"]
[ext_resource type="AudioStream" uid="uid://dplpi8mfb4qbo" path="res://assets/sound/sfx/enemies/EnemyDeath.wav" id="4_hr4ie"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/wasp/moving.gd" id="5_qu3j4"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/dead.gd" id="6_mu074"]
[ext_resource type="SpriteFrames" uid="uid://bs7g3q0xtkeh0" path="res://assets/enemies/flying_enemy/wasp_2.tres" id="9_5impn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b04t4"]
size = Vector2(8, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_mqycg"]
radius = 59.0085

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31pbl"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8u6t"]
size = Vector2(10, 2)

[sub_resource type="Curve" id="Curve_x12rx"]
_data = [Vector2(0.0140263, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Wasp" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "death_vfx") groups=["Enemy", "Moving"]]
collision_layer = 8
motion_mode = 1
script = ExtResource("1_2m428")
amplitude = 20.0
sprites = Array[SpriteFrames]([ExtResource("3_37lnf"), ExtResource("9_5impn")])
x_start_direction = Vector2(-1, 2.08165e-12)
horizontal_speed = 30.0
death_animation_time = 1.0
death_sfx = ExtResource("4_hr4ie")
health_component = NodePath("HealthComponent")
death_vfx = NodePath("PoofParticles")

[node name="AnimatedSprite2D" parent="." instance=ExtResource("3_lp1mt")]
position = Vector2(0, -1)
sprite_frames = ExtResource("3_37lnf")
animation = &"Moving"
speed_scale = 0.5

[node name="LeftWallDetector" type="RayCast2D" parent="."]
target_position = Vector2(-7, 0)

[node name="RightWallDetector" type="RayCast2D" parent="."]
target_position = Vector2(7, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_b04t4")

[node name="AggroRange" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("CircleShape2D_mqycg")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_31pbl")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_v8u6t")

[node name="PoofParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.04
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_max = 5.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_x12rx")

[node name="HealthComponent" parent="." instance=ExtResource("1_o4xoc")]
max_health = 10

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_o2djb")
state_type = "Enemy"
initial_state = NodePath("Moving")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("5_qu3j4")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("6_mu074")

[connection signal="body_entered" from="AggroRange" to="StateMachine/Moving" method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="AggroRange" to="StateMachine/Moving" method="_on_aggro_range_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="body_entered" from="HitBox" to="StateMachine/Moving" method="_on_hit_box_body_entered"]
